# inno-syncer

./: .gitignore  README.md  main.ipynb  setup.cfg
inno_syncer/: main.py
inno_syncer/connection/: __init__.py  source.py
inno_syncer/sync/: config.py
inno_syncer/test/: integration_test.py
iomete_postgresql_sync/sync/: config.py
samples/mssql/: application.conf  driver.py
samples/mysql/: application.conf  driver.py
samples/portgresql/: application.conf  driver.py
src/inno_syncer/: main.py
src/inno_syncer/connection/: __init__.py  mssql.py  mysql.py  portgresql.py  source.py
src/inno_syncer/sync/: config.py
tests/: _spark_session.py  integration_test.py  test_table_name_extractor.py
