[metadata]
name = inno_syncer
version = 0.1.0
author = Harry
author_email = manhtct.dev@gmail.com
description = inno_syncer
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = inno_syncer
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
install_requires =
    pyhocon==0.3.*

[options.extras_require]
dev =
    pyspark==3.3.2
    pytest==7.1.2